--- a/package.json
+++ b/package.json
@@ -17,9 +17,17 @@
   "author": "alexnm <alex.n.moldovan@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
+    "eslint-config-airbnb": "^15.1.0"
+  },
+  "devDependencies": {
     "babel-eslint": "^8.0.1",
     "eslint": "^4.8.0",
-    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.4.0"
+  },
+  "peerDependencies": {
+    "eslint": "^4.8.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0"
